--- a/arch/arm/boot/dts/sun8i-h3-nanopi.dtsi
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi.dtsi
@@ -105,6 +105,7 @@
 			gpios = <&r_pio 0 10 GPIO_ACTIVE_HIGH>;
 			default-state = "on";
 		};
+
 	};
 
 	r_gpio_keys {
@@ -381,7 +382,7 @@
 	spidev0: spi@0 {
 		compatible = "nanopi,spidev";
 		reg = <0>;
-		status = "okay";
+		status = "disabled";
 
 		spi-max-frequency = <10000000>;
 	};
@@ -391,7 +392,7 @@
 		#size-cells = <1>;
 		compatible = "mxicy,mx25l12805d";
 		reg = <0>;
-		status = "disabled";
+		status = "okay";
 
 		spi-max-frequency = <50000000>;
 		mode = <0>;
@@ -402,45 +403,47 @@
 		};
 	};
 
-	pitft: pitft@0{
-		compatible = "sitronix,st7789v";
-		reg = <0>;
-		status = "disabled";
+ pitft: pitft@0{
+ 		compatible = "sitronix,st7789v";
+ 		reg = <0>;
+ 		status = "disabled";
 
-		spi-max-frequency = <50000000>;
-		rotate = <90>;
-		fps = <33>;
-		buswidth = <8>;
-		dc-gpios = <&pio 0 1 GPIO_ACTIVE_HIGH>;	 /* PA1 */
-		reset-gpios = <&pio 6 11 GPIO_ACTIVE_HIGH>; /* PG11 */
-		debug = <0x0>;
-	};
+ 		spi-max-frequency = <50000000>;
+ 		rotate = <90>;
+ 		fps = <33>;
+ 		buswidth = <8>;
+ 		dc-gpios = <&pio 0 1 GPIO_ACTIVE_HIGH>;	 /* PA1 */
+ 		reset-gpios = <&pio 6 11 GPIO_ACTIVE_HIGH>; /* PG11 */
+ 		debug = <0x0>;
+ 	};
 
-	pitft_ts: pitft-ts@1 {
-		compatible = "ti,ads7846";
-		reg = <1>;
-		status = "disabled";
+ 	pitft_ts: pitft-ts@1 {
+ 		compatible = "ti,ads7846";
+ 		reg = <1>;
+ 		status = "disabled";
 
-		spi-max-frequency = <2000000>;
-		interrupt-parent = <&pio>;
-		interrupts = <6 9 IRQ_TYPE_EDGE_FALLING>;   /* PG9 / EINT9 */
-		pendown-gpio = <&pio 6 9 GPIO_ACTIVE_LOW>;
-		ti,swap-xy;
-		ti,vref-delay-usecs = <1000>;
-		ti,x-min = /bits/ 16 <100>;
-		ti,x-max = /bits/ 16 <0xfff>;
-		ti,y-min = /bits/ 16 <100>;
-		ti,y-max = /bits/ 16 <0xfff>;
-		ti,vref-mv = <3300>;
-		ti,x-plate-ohms = /bits/ 16 <256>;
-		ti,penirq-recheck-delay-usecs = <10>;
-		ti,settle-delay-usec = /bits/ 16 <100>;
-		ti,keep-vref-on = <1>;
-		ti,pressure-max = /bits/ 16 <0xfff>;
-		ti,debounce-max = <10>;
-		ti,debounce-tol = <30>;
-		ti,debounce-rep = <1>;
-	};
+ 		spi-max-frequency = <2000000>;
+ 		interrupt-parent = <&pio>;
+ 		interrupts = <6 9 IRQ_TYPE_EDGE_FALLING>;   /* PG9 / EINT9 */
+ 		pendown-gpio = <&pio 6 9 GPIO_ACTIVE_LOW>;
+ 		ti,swap-xy;
+ 		ti,vref-delay-usecs = <1000>;
+ 		ti,x-min = /bits/ 16 <100>;
+ 		ti,x-max = /bits/ 16 <0xfff>;
+ 		ti,y-min = /bits/ 16 <100>;
+ 		ti,y-max = /bits/ 16 <0xfff>;
+ 		ti,vref-mv = <3300>;
+ 		ti,x-plate-ohms = /bits/ 16 <256>;
+ 		ti,penirq-recheck-delay-usecs = <10>;
+ 		ti,settle-delay-usec = /bits/ 16 <100>;
+ 		ti,keep-vref-on = <1>;
+ 		ti,pressure-max = /bits/ 16 <0xfff>;
+ 		ti,debounce-max = <10>;
+ 		ti,debounce-tol = <30>;
+ 		ti,debounce-rep = <1>;
+ 	};
+
+
 };
 
 &spi1 {
@@ -458,7 +461,7 @@
 };
 
 &hdmi {
-	status = "okay";
+	status = "disable";
 };
 
 &hdmi_out {
@@ -468,7 +471,7 @@
 };
 
 &sound_hdmi {
-	status = "okay";
+	status = "disable";
 };
 
 &tcon0 {
